<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.android.kstories.user.ui.home.HomeFragment"
        android:label="@string/home_title_page"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.android.kstories.search.SearchFragment"
        android:label="@string/menu_search_title"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_browse"
        android:name="com.example.android.kstories.BrowseAllFragment"
        android:label="@string/menu_browse_title"
        tools:layout="@layout/fragment_gallery" />



    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.android.kstories.user.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />


    <fragment
        android:id="@+id/nav_recordings"
        android:name="com.example.android.kstories.user.UserSavedAudioFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>