<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.ui.home.HomeFragment">




    <TextView
        android:id="@+id/welcome_text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcometextuser" />

    <TextView
        android:id="@+id/welcome_description_text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomedescriptiontextuser"
        />


    <Button
        android:id="@+id/record_audio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordaudio" />

    <Button
        android:id="@+id/edit_user_details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edituserdetails" />


</LinearLayout>