<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/recordAudioBlue"
    tools:context=".user.UserRecordAudioActivity">


<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        >-->
<!--        <TextView-->
<!--            android:id="@+id/tv_pass"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/tv_duration"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/tv_due"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            />-->





<!--    </RelativeLayout>-->

    <Button
        android:id="@+id/record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/activeView"
        android:text="@string/startRecording"
        android:layout_marginBottom="8dp"
        android:onClick="recordButton" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/activeView"
        android:text="@string/startPlaying"
        android:layout_marginBottom="8dp"
        android:onClick="playButton"
        />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/activeView"
        android:text="@string/edit"
        android:layout_marginBottom="8dp"
        android:onClick="editButton"
        />

<!--    <Button-->
<!--        android:id="@+id/pause_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/activeView"-->
<!--        android:text="@string/pause"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:onClick="pauseButton" />-->

<!--    <Button-->
<!--        android:id="@+id/resume_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/activeView"-->
<!--        android:text="@string/resume"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:onClick="resumeButton" />-->


    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/activeView"
        android:text="@string/stop"
        android:layout_marginBottom="8dp"
        android:onClick="stopButton" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="00:00:00"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="50dp"/>

</LinearLayout>