<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.kstories.user.ui.aboutus.AboutUsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


        <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="226dp"
            android:layout_weight="1"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baobabtree" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        style="?android:attr/textAppearanceLarge"
        android:text="@string/menu_aboutus_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <TextView
        android:id="@+id/articlebody"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
        android:layout_marginRight="@dimen/detail_inner_horiz_margin"
        android:paddingBottom="@dimen/detail_body_bottom_margin"
        android:textColor="@color/brown"
        android:text="@string/aboutbody"
        android:textColorLink="@color/orange_a700"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/detail_body_text_size"
        android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />

            <TextView
                android:id="@+id/articlebodytwo"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                android:paddingBottom="@dimen/detail_body_bottom_margin"
                android:textColor="@color/brown"
                android:text="@string/aboutbodytwo"
                android:textColorLink="@color/orange_a700"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/detail_body_text_size"
                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="articlebody" />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>